# ZPD-V2v2

./: AAPL.csv  else.txt  main.py  myfile.csv  pyproject.toml
