[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
bs4 = "^0.0.1"
requests = "^2.27.1"
investpy = "^1.0.8"
ta = "^0.10.1"
yfinance = "^0.1.70"
pandas-datareader = "^0.10.0"
pandas-ta = "^0.3.14-beta.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"